--- a/DataStructures/DataStructures/DataStructures.vcxproj
+++ b/DataStructures/DataStructures/DataStructures.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="ArrayQueue.h" />
     <ClInclude Include="CardGame.h" />
+    <ClInclude Include="Factory.h" />
     <ClInclude Include="LinkedStack.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -155,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="ArrayQueue.cpp" />
     <ClCompile Include="CardGame.cpp" />
+    <ClCompile Include="Factory.cpp" />
     <ClCompile Include="LinkedStack.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
